--- a/NCoreUtils.Authentication.OpenId/NCoreUtils.Authentication.OpenId.csproj
+++ b/NCoreUtils.Authentication.OpenId/NCoreUtils.Authentication.OpenId.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.1</Version>
+    <Version>1.1.2-alpha0</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NCoreUtils.Authentication.External.OpenId\NCoreUtils.Authentication.External.OpenId.csproj" />
