--- a/NCoreUtils.Authentication.Password/NCoreUtils.Authentication.Password.csproj
+++ b/NCoreUtils.Authentication.Password/NCoreUtils.Authentication.Password.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.1</Version>
+    <Version>1.1.2-alpha0</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NCoreUtils.Authentication.Password.Abstractions\NCoreUtils.Authentication.Password.Abstractions.csproj" />
@@ -9,7 +9,7 @@
     <ProjectReference Include="..\NCoreUtils.Authentication.Local\NCoreUtils.Authentication.Local.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
 </Project>
