--- a/NCoreUtils.Authentication.Password/NCoreUtils.Authentication.Password.csproj
+++ b/NCoreUtils.Authentication.Password/NCoreUtils.Authentication.Password.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.2-alpha0</Version>
+    <Version>1.1.2</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NCoreUtils.Authentication.Password.Abstractions\NCoreUtils.Authentication.Password.Abstractions.csproj" />
