--- a/NCoreUtils.Authentication.Abstractions/NCoreUtils.Authentication.Abstractions.csproj
+++ b/NCoreUtils.Authentication.Abstractions/NCoreUtils.Authentication.Abstractions.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.2</Version>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+    <Version>3.0.0</Version>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="1.0.0" />
   </ItemGroup>
 </Project>
