--- a/NCoreUtils.Authentication.Local/NCoreUtils.Authentication.Local.csproj
+++ b/NCoreUtils.Authentication.Local/NCoreUtils.Authentication.Local.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.2</Version>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+    <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NCoreUtils.Authentication.Local.Abstractions\NCoreUtils.Authentication.Local.Abstractions.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Async" Version="4.0.0" />
   </ItemGroup>
 </Project>
