--- a/NCoreUtils.Authentication.OpenId/NCoreUtils.Authentication.OpenId.csproj
+++ b/NCoreUtils.Authentication.OpenId/NCoreUtils.Authentication.OpenId.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.2</Version>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+    <Version>3.0.0</Version>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\NCoreUtils.Authentication.External.OpenId\NCoreUtils.Authentication.External.OpenId.csproj" />
